# pairs

./: .gitignore  CMakeLists.txt  FindwaLBerla.cmake  LICENSE  Makefile  README.md  arrays.py  assign.py  ast.py  block.py  block_types.py  branches.py  cast.py  cell_lists.py  data_types.py  expr.py  lattice.py  lift.py  lit.py  loops.py  memory.py  new_syntax.py  pairs.py  part_prot.py  particle.py  particle_simulation.py  printer.py  properties.py  resize.py  setup.py  timestep.py  transform.py  variables.py
ast/: arrays.py  assign.py  ast_node.py  bin_op.py  block.py  branches.py  cast.py  expr.py  layouts.py  lit.py  loops.py  math.py  memory.py  mutator.py  properties.py  scope.py  select.py  sizeof.py  transform.py  utils.py  variables.py  visitor.py
code_gen/: cgen.py  printer.py
coupling/: parse_cpp.py
data/: add_flags.sh  add_types.sh  add_uid.sh  minimd_setup_4x4x4.input  minimd_setup_4x4x4_onetype.input  planes.input  spheres.input  spheres_bottom.input  spheres_original.input  two_spheres.input
examples/: dem.py  dem2.py  kernels  lj.py  lj_embedded.py  lj_func.py  lj_ns.cpp  lj_ns.cu  lj_onetype.py  md.py
graph/: graphviz.py
ir/: arrays.py  assign.py  ast_node.py  bin_op.py  block.py  branches.py  cast.py  functions.py  lit.py  loops.py  math.py  memory.py  mutator.py  properties.py  select.py  sizeof.py  transform.py  utils.py  variables.py  vector_expr.py
log/: logbook_RR.md
mlir/: CMakeLists.txt  ast.cpp  ast.h  example.txt  lexer.h  parser.h  ppc.cpp
new_syntax/: test.py
runtime/: allocate.hpp  array.hpp  boundary_weights.hpp  comm.hpp  contact_property.hpp  copper_fcc_lattice.hpp  dem_sc_grid.hpp  device_flags.hpp  feature_property.hpp  pairs.cpp  pairs.hpp  pairs_common.hpp  property.hpp  read_from_file.hpp  runtime_var.hpp  stats.hpp  thermo.hpp  timers.hpp  timing.hpp  tracked_variable.hpp  vector3.hpp  vtk.hpp
runtime/devices/: cuda.cu  cuda.hpp  device.hpp  dummy.cpp  dummy.hpp
runtime/domain/: .domain_partitioning.hpp.swp  ParticleDataHanding.hpp  ParticleDataHandling.hpp  block_forest.cpp  block_forest.hpp  domain_partitioning.hpp  no_partition.hpp  regular_6d_stencil.cpp  regular_6d_stencil.hpp
runtime/interfaces/: dem.hpp  last_generated.hpp
sim/: arrays.py  cell_lists.py  grid.py  kernel_wrapper.py  lattice.py  neighbor_lists.py  particle_simulation.py  pbc.py  properties.py  properties_decl.py  read_from_file.py  resize.py  setup_wrapper.py  timestep.py  variables.py  vtk.py
src/pairs/: __init__.py
src/pairs/analysis/: __init__.py  bin_ops.py  blocks.py  devices.py  expressions.py  modules.py
src/pairs/code_gen/: .cgen.py.swp  cgen.py  printer.py  target.py
src/pairs/coupling/: parse_cpp.py
src/pairs/graph/: graphviz.py
src/pairs/ir/: accessor_class.py  actions.py  apply.py  arrays.py  assign.py  ast_node.py  ast_term.py  atomic.py  bin_op.py  block.py  branches.py  cast.py  const_vector.py  contexts.py  data_types.py  declaration.py  device.py  dump.py  features.py  functions.py  kernel.py  layouts.py  lit.py  loops.py  math.py  matrices.py  memory.py  module.py  mutator.py  operator_class.py  operators.py  particle_attributes.py  properties.py  quaternions.py  scalars.py  select.py  sizeof.py  symbols.py  timers.py  transform.py  (+6 more)
src/pairs/mapping/: .funcs.py.swp  funcs.py  keywords.py
src/pairs/sim/: arrays.py  cell_lists.py  comm.py  contact_history.py  copper_fcc_lattice.py  dem_sc_grid.py  domain.py  domain_partitioners.py  domain_partitioning.py  features.py  flags.py  grid.py  instrumentation.py  interaction.py  kernel_wrapper.py  lattice.py  lowerable.py  neighbor_lists.py  particle_simulation.py  pbc.py  properties.py  read_from_file.py  resize.py  setup_wrapper.py  shapes.py  simulation.py  thermo.py  timestep.py  variables.py  vtk.py
src/pairs/transformations/: LICM.py  __init__.py  add_device_copies.py  blocks.py  devices.py  expressions.py  fetch_modules_references.py  instrumentation.py  loops.py  lower.py  merge_adjacent_blocks.py  modules.py  prioritize_scalar_ops.py  replace_modules_by_calls.py  replace_symbols.py  set_used_bin_ops.py  simplify.py
transformations/: LICM.py  flatten.py  prioritize_scalar_ops.py  set_used_bin_ops.py  simplify.py
